<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.cx49085.recourse.download.DownloadFragment"
    android:background="@color/white">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/download_tank1"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/downloadImg"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_download_download"
            app:layout_constraintLeft_toLeftOf="@+id/download_tank1"
            app:layout_constraintTop_toTopOf="@+id/download_tank1" />

        <TextView
            android:id="@+id/downloadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/download"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/downloadImg"
            app:layout_constraintTop_toTopOf="@+id/download_tank1" />

        <TextView
            android:id="@+id/surplus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/remain"
            android:textColor="@color/text_mute"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/block_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/downloadImg">

            <ImageView
                android:id="@+id/block_download_main"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_home_recommend"
                android:contentDescription="@string/hello_blank_fragment"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="10dp"
                android:paddingTop="4dp"
                android:text="@string/download_course"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/block_download_main" />
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mute"
            app:layout_constraintTop_toBottomOf="@id/block_download"
            >

        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
</FrameLayout>
