<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.cx49085.recourse.home.HomeFragment"
    android:background="@color/white">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
         android:focusableInTouchMode="true">
    <com.youth.banner.Banner
        android:id="@+id/banner_main"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:background="@color/banner_bgcolor"
        />

    <ImageView
        android:id="@+id/block_recommend_main"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:textStyle="bold"
        android:background="@drawable/ic_home_recommend"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/hello_blank_fragment"
        app:layout_constraintTop_toBottomOf="@id/banner_main"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="15dp"
        />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:paddingTop="4dp"
        android:text="@string/recommend"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/block_recommend_main"
        app:layout_constraintTop_toTopOf="@+id/more_link_main" />
<!---->
    <TextView
        android:id="@+id/more_link_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="end"
        android:paddingBottom="0dp"
        android:paddingEnd="10dp"
        android:paddingStart="0dp"
        android:paddingTop="4dp"
        android:text="@string/more"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/banner_main" />

    <!---->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recommend_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/block_recommend_main"

        >

    </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>
